# zero2prod

./: CHANGELOG.md  Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-0ee19634d921fc2a6b613233a846d46a184242690ee42c6cfb47dacfcc886128.json
configuration/: production.yaml
migrations/: 20241207100829_create_subscriptions_table.sql  20250228084943_make_status_not_null_in_subscriptions.sql  20250228085355_create_subscription_tokens_table.sql
scripts/: init_db.sh  prepare_queries.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
