[package]
name = "zero2prod"
version = "0.2.0"
authors = ["Nicholas Demaio"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
