[package]
name = "zero2prod"
version = "0.3.0"
authors = ["Nicholas Demaio"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
serde = "1"
config = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
secrecy = { version = "0.10", features = ["serde"] }
tracing-actix-web = "0.7"
serde-aux = "4"
unicode-segmentation = "1"
validator = "0.20"

[dev-dependencies]
claims = "0.8"
fake = "4"
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.9"
wiremock = "0.6"
serde_json = "1"
linkify = "0.10"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]
